<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mapFragmentView"
    tools:context=".Fragments.MapFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapBoxView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat = "28.510774"
        mapbox:mapbox_cameraTargetLng = "2.0"
        mapbox:mapbox_cameraZoom = "3.5">

    </com.mapbox.mapboxsdk.maps.MapView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/search_rounded_layout"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="10dp">

        <AutoCompleteTextView
            android:id="@+id/searchCountryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/filterIconView"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/searchBarHint"
            android:inputType="textPersonName"
            android:textDirection="rtl" />

        <Spinner
            android:id="@+id/filterIconView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/ic_filter" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/centreAcceulsInfoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@id/menuFloatingBtn"
        android:visibility="gone"
        mapbox:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:padding="5dp">

            <TextView
                android:id="@+id/centreTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_regular"
                android:text="الاسم :"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/centerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/centreTitleLabel"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/darkblue"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/centerInfoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerTitle"
                android:fontFamily="@font/almarai_regular"
                android:text="معلومات :"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/centerInfo"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerTitle"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="63dp"
                android:layout_toEndOf="@id/centerInfoLabel"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/darkblue"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/centerCityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerInfoLabel"
                android:fontFamily="@font/almarai_regular"
                android:text="الولاية :"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/centerCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerInfo"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/centerCityLabel"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/darkblue"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/centerNbrLitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerCityLabel"
                android:fontFamily="@font/almarai_regular"
                android:text="العدد الاجمالي للاسرة :"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/centerNbrLits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerCity"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/centerNbrLitLabel"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/darkblue"
                android:textDirection="rtl" />

            <TextView
                android:id="@+id/centerNbrLitLibreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerNbrLitLabel"
                android:fontFamily="@font/almarai_regular"
                android:text="عدد الاسرة الفارغة :"
                android:textColor="#404040" />

            <TextView
                android:id="@+id/centerNbrLitLibre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/centerNbrLits"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/centerNbrLitLibreLabel"
                android:fontFamily="@font/almarai_regular"
                android:textColor="@color/darkblue"
                android:textDirection="rtl" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/countriesStatsFloatingBtn"
        android:layout_width="@dimen/standard_45"
        android:layout_height="@dimen/standard_45"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_equalizer_black_24dp"
        mapbox:backgroundTint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/centersFloatingBtn"
        android:layout_width="@dimen/standard_45"
        android:layout_height="@dimen/standard_45"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_centers"
        mapbox:backgroundTint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dangerZoneFloatingBtn"
        android:layout_width="@dimen/standard_45"
        android:layout_height="@dimen/standard_45"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_warning"
        mapbox:backgroundTint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/algeriaFloatingBtn"
        android:layout_width="@dimen/standard_45"
        android:layout_height="@dimen/standard_45"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_algeria"
        mapbox:backgroundTint="#FFFFFF" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menuFloatingBtn"
        android:layout_width="@dimen/standard_45"
        android:layout_height="@dimen/standard_45"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@drawable/ic_menu"
        mapbox:backgroundTint="#FFFFFF" />

    <TextView
        android:id="@+id/titleStatsCountries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/dangerZoneFloatingBtn"
        android:fontFamily="@font/almarai_bold"
        android:text="احصائيات بلدان العالم"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleCenters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/dangerZoneFloatingBtn"
        android:fontFamily="@font/almarai_bold"
        android:text="مراكز الاستقبال"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleDangerZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/dangerZoneFloatingBtn"
        android:fontFamily="@font/almarai_bold"
        android:text="مناطق الخطر"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleAlgeriaZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@id/dangerZoneFloatingBtn"
        android:fontFamily="@font/almarai_bold"
        android:text="توزيع الحالات في الجزائر"
        android:textSize="16sp"
        android:visibility="gone" />


</RelativeLayout>