...
            app:backgroundTint="@color/white"
            app:borderWidth="3dp"
            app:maxImageSize="46dp"
            app:srcCompat="@drawable/ic_add" />

        <Button
            android:id="@+id/mapBtnView"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_map"
...
